# configurable_serde

./: CHANGES.md  Cargo.toml  README.md
.github/workflows/: pipeline.yaml
configurable_serde/: Cargo.toml
configurable_serde/src/: lib.rs
configurable_serde/tests/: date_format_test.rs  format_type.rs
configurable_serde_macros/: Cargo.toml
configurable_serde_macros/src/: configure_serde.rs  create_config.rs  lib.rs
