[workspace]
members = [
    "configurable_serde",
    "configurable_serde_macros",
]
resolver = "2"

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2024"
authors = ["Michał Pokrywka <wolfmoon@o2.pl>"]
readme = "README.md"
keywords = ["serde", "serialization", "no_std", "proc-macros", "macro-generation"]
homepage = "https://github.com/sfisol/configurable_serde"
repository = "https://github.com/sfisol/configurable_serde"
documentation = "https://docs.rs/configurable_serde"
categories = ["encoding", "developement-tools", "development-tools::procedural-macro-helpers", "no-std"]
