[package]
name = "configurable_serde_macros"
version = "0.1.0"
description = "A proc-macro to apply reusable serde configurations - macros."
license.workspace = true
edition.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
darling = "0.21"
proc-macro-error = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
proc-macro2 = "1.0"
